--- a/index.html
+++ b/index.html
@@ -9,15 +9,33 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<!-- Navigation Bar -->
+<nav class="navbar">
+  <div class="nav-container">
+    <a href="#" class="nav-logo">PORTFOLIO</a>
+    <div class="nav-menu" id="nav-menu">
+      <a href="#about" class="nav-link"><i class='fas fa-user'></i> About</a>
+      <a href="#skills" class="nav-link"><i class='fas fa-code'></i> Skills</a>
+      <a href="#competitions" class="nav-link"><i class='fas fa-trophy'></i> Achievements</a>
+      <a href="#repositories" class="nav-link"><i class='fab fa-github'></i> GitHub</a>
+      <a href="#projects" class="nav-link"><i class='fas fa-folder'></i> Projects</a>
+      <a href="#contact" class="nav-link"><i class='fas fa-envelope'></i> Contacts</a>
+    </div>
+    <button id="darkModeToggle" class="dark-mode-toggle">
+      <i class="fas fa-moon"></i>
+    </button>
+    <div class="hamburger" id="hamburger">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
+    </div>
+  </div>
+</nav>
+
 <div class="page-content">
 
 <!-- Hero Section -->
 <header class="fade-in">
-  <div class="top-right">
-    <button id="darkModeToggle" class="dark-mode-toggle">
-      <i class="fas fa-moon"></i>
-    </button>
-  </div>
   
   <div class="profile-pic scale-in">
     <img src="profile.jpg" alt="Vikranth V">
@@ -54,7 +72,8 @@
   <h3>Work Experience <i class='fas fa-briefcase'></i></h3>
   <div class="bubble">
     <ul>
-      <li><i class='fas fa-laptop-code'></i> Internship – InternPe (Python Programming), Remote (Jul 2025 – September 2025)</li>
+      <li><i class='fas fa-laptop-code'></i> Internship – InternPe (Python Programming), Remote (Jul 2025 – Sep 2025)</li>
+      <li><i class='fas fa-laptop-code'></i> Internship – Prodigy lnfoTech (Web Development), Remote (Jan 2026 – Feb 2026)</li>
       <li><i class='fas fa-handshake'></i> Member – iStart KIOT MXIncubator Foundation, Salem, Tamil Nadu (Sep 2024 – Present)</li>
     </ul>
   </div>
@@ -169,9 +188,15 @@
       <h3><i class='fas fa-qrcode'></i> Smart Attendance Platform</h3>
       <p>Smart attendance and productivity platform</p>
     </a>
-
-    <!-- Hidden repositories -->
     <div id="more-repositories" class="more-projects">
+      <a class="repository-card" href="https://github.com/Vikranth-1/Relational_Databases" target="_blank">
+        <h3><i class='fas fa-database'></i> Relational Databases</h3>
+        <p>Notes on Relational Database concepts and implementations</p>
+      </a>
+      <a class="repository-card" href="https://github.com/Vikranth-1/Internship_at_InternPE" target="_blank">
+        <h3><i class='fas fa-briefcase'></i> Internship_at_InternPE</h3>
+        <p>Python Programming Internship projects and work</p>
+      </a>
       <a class="repository-card" href="https://github.com/Vikranth-1/C-Cpp_Programming" target="_blank">
         <h3><i class='fas fa-microchip'></i> C-Cpp_Programming</h3>
         <p>C and C++ programming examples</p>
@@ -180,8 +205,8 @@
         <h3><i class='fas fa-sitemap'></i> DSA-Data-Structures-and-Algorithm-Notes</h3>
         <p>Data Structures and Algorithms notes</p>
       </a>
-      <a class="repository-card" href="https://github.com/Vikranth-1/NPTEL-loT_-lnternet-of-Things-" target="_blank">
-        <h3><i class='fas fa-network-wired'></i> NPTEL-loT_-lnternet-of-Things-</h3>
+      <a class="repository-card" href="https://github.com/Vikranth-1/NPTEL-IoT_-Internet-of-Things-" target="_blank">
+        <h3><i class='fas fa-network-wired'></i> NPTEL-IoT_-Internet-of-Things-</h3>
         <p>Internet of Things course materials</p>
       </a>
       <a class="repository-card" href="https://github.com/Vikranth-1/Internship_at_lnternPE" target="_blank">
@@ -372,6 +397,39 @@ const observer = new IntersectionObserver((entries) => {
     }
   });
 }, observerOptions);
+
+// Navigation Toggle Functionality
+const hamburger = document.getElementById('hamburger');
+const navMenu = document.getElementById('nav-menu');
+
+hamburger.addEventListener('click', function() {
+  hamburger.classList.toggle('active');
+  navMenu.classList.toggle('active');
+});
+
+// Close menu when clicking on a link
+document.querySelectorAll('.nav-link').forEach(n => n.addEventListener('click', () => {
+  hamburger.classList.remove('active');
+  navMenu.classList.remove('active');
+}));
+
+// Smooth scrolling for anchor links
+document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+  anchor.addEventListener('click', function (e) {
+    e.preventDefault();
+    
+    const targetId = this.getAttribute('href');
+    if(targetId === '#') return;
+    
+    const targetElement = document.querySelector(targetId);
+    if(targetElement) {
+      window.scrollTo({
+        top: targetElement.offsetTop - 80,
+        behavior: 'smooth'
+      });
+    }
+  });
+});
 
 // Observe all animated elements
 const animatedElements = document.querySelectorAll('.fade-in, .slide-in-left, .slide-in-right, .scale-in');
