--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <a href="#about" class="nav-link"><i class='fas fa-user'></i> About</a>
       <a href="#skills" class="nav-link"><i class='fas fa-code'></i> Skills</a>
       <a href="#competitions" class="nav-link"><i class='fas fa-trophy'></i> Achievements</a>
-      <a href="#repositories" class="nav-link"><i class='fab fa-github'></i> GitHub</a>
       <a href="#projects" class="nav-link"><i class='fas fa-folder'></i> Projects</a>
+      <a href="#notes" class="nav-link"><i class='fas fa-sticky-note'></i> Notes</a>
       <a href="#contact" class="nav-link"><i class='fas fa-envelope'></i> Contacts</a>
     </div>
     <button id="darkModeToggle" class="dark-mode-toggle">
@@ -43,7 +43,7 @@
 
   <div class="hero-content slide-in-left">
     <h1 class="glow">VIKRANTH V</h1>
-    <p class="pulse"><i class='fas fa-graduation-cap'></i> B.Tech IT Student | <i class='fas fa-rocket'></i> iStart Member @ KIOT | <i class='fas fa-handshake'></i> ISTE Member | <i class='fas fa-laptop-code'></i> Tech Enthusiast | <i class='fas fa-tools'></i> Passionate Learner</p>
+    <p><i class='fas fa-graduation-cap'></i> B.Tech IT Student | <i class='fas fa-rocket'></i> iStart Member @ KIOT | <i class='fas fa-handshake'></i> ISTE Member | <i class='fas fa-laptop-code'></i> Tech Enthusiast | <i class='fas fa-tools'></i> Passionate Learner</p>
   </div>
 
   <div class="hero-buttons slide-in-right animated-hover">
@@ -167,87 +167,12 @@
   <button id="compReadMoreBtn" class="read-more-btn"><i class='fas fa-chevron-down'></i> Show More Participation</button>
 </section>
 
-<!-- GitHub Repositories Section -->
-<section id="repositories" class="projects fade-in">
-  <h2>GitHub Repositories <i class='fab fa-github'></i></h2>
-  <div class="repositories-grid">
-    <!-- First 4 repositories (visible initially) -->
-    <a class="repository-card" href="https://github.com/Vikranth-1/JS_Programming" target="_blank">
-      <h3><i class='fab fa-js'></i> JS_Programming</h3>
-      <p>JavaScript programming examples and projects</p>
-    </a>
-    <a class="repository-card" href="https://github.com/Vikranth-1/Portfolio" target="_blank">
-      <h3><i class='fas fa-portrait'></i> Portfolio</h3>
-      <p>Personal portfolio website</p>
-    </a>
-    <a class="repository-card" href="https://github.com/Vikranth-1/Python_Programming" target="_blank">
-      <h3><i class='fab fa-python'></i> Python_Programming</h3>
-      <p>Python programming examples and projects</p>
-    </a>
-    <a class="repository-card" href="https://github.com/Vikranth-1/Smart_Attendance_Productivity_Platform" target="_blank">
-      <h3><i class='fas fa-qrcode'></i> Smart Attendance Platform</h3>
-      <p>Smart attendance and productivity platform</p>
-    </a>
-    <div id="more-repositories" class="more-projects">
-      <a class="repository-card" href="https://github.com/Vikranth-1/Relational_Databases" target="_blank">
-        <h3><i class='fas fa-database'></i> Relational Databases</h3>
-        <p>Notes on Relational Database concepts and implementations</p>
-      </a>
-      <a class="repository-card" href="https://github.com/Vikranth-1/Internship_at_InternPE" target="_blank">
-        <h3><i class='fas fa-briefcase'></i> Internship_at_InternPE</h3>
-        <p>Python Programming Internship projects and work</p>
-      </a>
-      <a class="repository-card" href="https://github.com/Vikranth-1/C-Cpp_Programming" target="_blank">
-        <h3><i class='fas fa-microchip'></i> C-Cpp_Programming</h3>
-        <p>C and C++ programming examples</p>
-      </a>
-      <a class="repository-card" href="https://github.com/Vikranth-1/DSA-Data-Structures-and-Algorithm-Notes" target="_blank">
-        <h3><i class='fas fa-sitemap'></i> DSA-Data-Structures-and-Algorithm-Notes</h3>
-        <p>Data Structures and Algorithms notes</p>
-      </a>
-      <a class="repository-card" href="https://github.com/Vikranth-1/NPTEL-IoT_-Internet-of-Things-" target="_blank">
-        <h3><i class='fas fa-network-wired'></i> NPTEL-IoT_-Internet-of-Things-</h3>
-        <p>Internet of Things course materials</p>
-      </a>
-      <a class="repository-card" href="https://github.com/Vikranth-1/Internship_at_lnternPE" target="_blank">
-        <h3><i class='fas fa-briefcase'></i> Internship_at_lnternPE</h3>
-        <p>Internship projects and work</p>
-      </a>
-      <a class="repository-card" href="https://github.com/Vikranth-1/OS-Operating-System" target="_blank">
-        <h3><i class='fas fa-desktop'></i> OS-Operating-System</h3>
-        <p>Operating System concepts and projects</p>
-      </a>
-      <a class="repository-card" href="https://github.com/Vikranth-1/DSA--Data-Structures-and-Algorithm-" target="_blank">
-        <h3><i class='fas fa-sitemap'></i> DSA--Data-Structures-and-Algorithm-</h3>
-        <p>Data Structures and Algorithms implementations</p>
-      </a>
-      <a class="repository-card" href="https://github.com/Vikranth-1/PYTHON" target="_blank">
-        <h3><i class='fab fa-python'></i> PYTHON</h3>
-        <p>Additional Python projects</p>
-      </a>
-      <a class="repository-card" href="https://github.com/Vikranth-1/Smart_Attendance_Productivity_Platform" target="_blank">
-        <h3><i class='fas fa-qrcode'></i> Smart Attendance Productivity PIatform</h3>
-        <p>Smart attendance and productivity platform</p>
-      </a>
-      <a class="repository-card" href="https://github.com/Vikranth-1/UNIX" target="_blank">
-        <h3><i class='fas fa-terminal'></i> UNIX</h3>
-        <p>UNIX system programming and utilities</p>
-      </a>
-      <a class="repository-card" href="https://github.com/Vikranth-1/Portfolio_App" target="_blank">
-        <h3><i class='fas fa-mobile-alt'></i> Portfolio_App</h3>
-        <p>Mobile portfolio application</p>
-      </a>
-    </div>
-  </div>
 
-  <button id="repoReadMoreBtn" class="read-more-btn"><i class='fas fa-chevron-down'></i> Show More Repositories</button>
-</section>
 
 <!-- Projects Section -->
 <section id="projects" class="projects fade-in">
   <h2>Projects <i class='fas fa-folder'></i></h2>
   <div class="projects-container">
-    <!-- First 4 projects (visible initially) -->
     <div class="project-tile">
       <a class="repository-card" href="https://github.com/Vikranth-1" target="_blank">
         <h3><i class='fas fa-heart'></i> Integrated Digital Care for Elderly Wellbeing</h3>
@@ -262,35 +187,33 @@
     </div>
     <div class="project-tile">
       <a class="repository-card" href="https://github.com/Vikranth-1" target="_blank">
-        <h3><i class='fas fa-laptop-code'></i> Portfolio Website</h3>
-        <p>Web Development Project - Designed and developed a responsive personal portfolio website to showcase projects, technical skills, and achievements. Implemented modern UI/UX principles with clean layouts and cross-device compatibility.</p>
-      </a>
-    </div>
-    <div class="project-tile">
-      <a class="repository-card" href="https://github.com/Vikranth-1" target="_blank">
         <h3><i class='fas fa-calendar-check'></i> EduTrack+ — Smart Attendance & Productivity Platform</h3>
         <p>Developed a smart web platform that automates attendance using QR codes and enhances student productivity through personalized planning tools, analytics, and intelligent recommendations for modern educational environments.</p>
       </a>
     </div>
-
-    <!-- Hidden projects -->
-    <div id="more-projects" class="more-projects">
-      <div class="project-tile">
-        <a class="repository-card" href="https://github.com/Vikranth-1" target="_blank">
-          <h3><i class='fas fa-chart-line'></i> UNIX Public — Financial Advisory Web Application</h3>
-          <p>Developed a public-facing web application for a financial advisory service, focusing on structured information presentation and user accessibility.</p>
-        </a>
-      </div>
-      <div class="project-tile">
-        <a class="repository-card" href="https://github.com/Vikranth-1" target="_blank">
-          <h3><i class='fas fa-mobile-alt'></i> Portfolio App</h3>
-          <p>Mobile Application - Developed a mobile application that hosts and displays a personal portfolio website within an app interface, providing a dedicated mobile viewing experience for portfolio content.</p>
-        </a>
-      </div>
+    <div class="project-tile">
+      <a class="repository-card" href="https://github.com/Vikranth-1" target="_blank">
+        <h3><i class='fas fa-chart-line'></i> UNIX Public — Financial Advisory Web Application</h3>
+        <p>Developed a public-facing web application for a financial advisory service, focusing on structured information presentation and user accessibility.</p>
+      </a>
+    </div>
+    <div class="project-tile">
+      <a class="repository-card" href="https://vikranth-1.github.io/Internship_at_Prodigy-InfoTech/" target="_blank">
+        <h3><i class='fas fa-laptop-code'></i> Internship at Prodigy InfoTech</h3>
+        <p>Web Development Intern - Gained hands-on experience in developing and implementing web solutions using modern technologies. Worked on various projects involving frontend and backend development, enhancing practical skills and industry knowledge.</p>
+      </a>
     </div>
   </div>
+</section>
 
-  <button id="readMoreBtn" class="read-more-btn"><i class='fas fa-chevron-down'></i> Show More Projects</button>
+<!-- Notes Section -->
+<section id="notes" class="projects fade-in">
+  <h2>Notes <i class='fas fa-sticky-note'></i></h2>
+  <div class="contact-buttons">
+    <a href="https://vikranth-1.github.io/JS_Programming/" target="_blank"><i class='fab fa-js'></i> JavaScript</a>
+    <a href="https://vikranth-1.github.io/Python_Programming/" target="_blank"><i class='fab fa-python'></i> Python</a>
+    <a href="https://github.com/Vikranth-1/Relational_Databases" target="_blank"><i class='fas fa-database'></i> Relational Database</a>
+  </div>
 </section>
 
 <!-- Contact Section -->
@@ -301,6 +224,7 @@
     <a href="https://vikranth-1.github.io/Portfolio/"><i class='fas fa-globe'></i> Portfolio</a>
     <a href="https://github.com/Vikranth-1"><i class='fas fa-code-branch'></i> GitHub</a>
     <a href="https://www.linkedin.com/in/vikranth-vijayakumar/"><i class='fab fa-linkedin'></i> LinkedIn</a>
+    <a href="https://wa.me/919500951199" target="_blank"><i class='fab fa-whatsapp'></i> WhatsApp</a>
   </div>
 </section>
 
@@ -350,30 +274,9 @@ darkModeToggle.addEventListener('click', function() {
   }, 10); // Small delay to ensure the animation triggers
 });
 
-const readMoreBtn = document.getElementById("readMoreBtn");
-const moreProjects = document.getElementById("more-projects");
-const repoReadMoreBtn = document.getElementById("repoReadMoreBtn");
-const moreRepositories = document.getElementById("more-repositories");
+
 const compReadMoreBtn = document.getElementById("compReadMoreBtn");
 const moreCompetitions = document.getElementById("more-competitions");
-
-readMoreBtn.addEventListener("click", function() {
-  moreProjects.classList.toggle("show");
-  if (moreProjects.classList.contains("show")) {
-    readMoreBtn.innerHTML = "<i class='fas fa-chevron-up'></i> Show Less Projects";
-  } else {
-    readMoreBtn.innerHTML = "<i class='fas fa-chevron-down'></i> Show More Projects";
-  }
-});
-
-repoReadMoreBtn.addEventListener("click", function() {
-  moreRepositories.classList.toggle("show");
-  if (moreRepositories.classList.contains("show")) {
-    repoReadMoreBtn.innerHTML = "<i class='fas fa-chevron-up'></i> Show Less Repositories";
-  } else {
-    repoReadMoreBtn.innerHTML = "<i class='fas fa-chevron-down'></i> Show More Repositories";
-  }
-});
 
 compReadMoreBtn.addEventListener("click", function() {
   moreCompetitions.classList.toggle("show");
