--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Vikranth V | Portfolio</title>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 <link rel="stylesheet" href="style.css">
 </head>
@@ -16,7 +16,6 @@
     <div class="nav-menu" id="nav-menu">
       <a href="#about" class="nav-link"><i class='fas fa-user'></i> About</a>
       <a href="#skills" class="nav-link"><i class='fas fa-code'></i> Skills</a>
-      <a href="#competitions" class="nav-link"><i class='fas fa-trophy'></i> Achievements</a>
       <a href="#projects" class="nav-link"><i class='fas fa-folder'></i> Projects</a>
       <a href="#notes" class="nav-link"><i class='fas fa-sticky-note'></i> Notes</a>
       <a href="#contact" class="nav-link"><i class='fas fa-envelope'></i> Contacts</a>
@@ -57,7 +56,7 @@
   <h2>About Me</h2>
   
   <div class="bubble">
-    <p><i class='fas fa-graduation-cap'></i> B.Tech IT student at Knowledge Institute of Technology, Salem (Sep 2024 – Mar 2028) with a CGPA of 8.71 (upto 2nd semester). <i class='fas fa-laptop-code'></i> Passionate about coding, problem-solving and building real-world applications. <i class='fas fa-handshake'></i> Active member of iStart KIOT MXIncubator Foundation and ISTE. <i class='fas fa-star'></i> Eager to learn, collaborate and innovate in the tech field.</p>
+    <p><i class='fas fa-graduation-cap'></i> B.Tech - Information Technology, Knowledge Institute of Technology, Salem (2024–2028) with a CGPA of 8.71 (upto 2nd semester). <i class='fas fa-laptop-code'></i> Passionate about coding, problem-solving and building real-world applications. <i class='fas fa-handshake'></i> Active member of iStart KIOT MXIncubator Foundation and ISTE. <i class='fas fa-star'></i> Eager to learn, collaborate and innovate in the tech field.</p>
   </div>
 
   <h3>Education <i class='fas fa-book'></i></h3>
@@ -194,6 +193,12 @@
       <a class="repository-card" href="https://github.com/Vikranth-1" target="_blank">
         <h3><i class='fas fa-chart-line'></i> UNIX Public — Financial Advisory Web Application</h3>
         <p>Developed a public-facing web application for a financial advisory service, focusing on structured information presentation and user accessibility.</p>
+      </a>
+    </div>
+    <div class="project-tile">
+      <a class="repository-card" href="#" target="_blank">
+        <h3><i class='fas fa-box'></i> Desktop-Based Shipping Label Generation System</h3>
+        <p>A production-ready desktop application designed and delivered for a logistics client to automate the generation of shipping labels and package documents for parcel operations. The system generates print-ready labels for each order, containing essential shipment details to be affixed directly onto packages prior to dispatch. This solution was commercially sold and successfully deployed, and is currently in active operational use. It replaces manual labeling processes, improving accuracy, consistency, and processing speed within daily logistics workflows. The project involved end-to-end development, including requirement analysis, application design, label layout formatting, and deployment, resulting in a reliable desktop solution aligned with real-world business needs.</p>
       </a>
     </div>
   </div>
@@ -337,4 +342,3 @@ animatedElements.forEach(el => {
 
 </body>
 </html>
-
