--- a/index.html
+++ b/index.html
@@ -139,6 +139,13 @@
         <!-- Hidden competitions -->
         <div id="more-competitions" class="more-projects">
           <div class="competition-card">
+            <h3><i class='fas fa-trophy'></i> Code Sangram | Alliance University | Top 10 Finalist</h3>
+            <p>HerWay is an AI-powered platform designed to empower rural and urban women by identifying skill gaps
+              through AI-driven assessments, generating personalized career roadmaps, and enabling community-based skill
+              exchange. The platform aims to help women discover, develop, and achieve their professional aspirations
+              through structured guidance and collaborative learning.</p>
+          </div>
+          <div class="competition-card">
             <h3><i class='fas fa-book-open'></i> Presenter — Blockchain in Supply Chain Management</h3>
             <p>International Tamil Engineers Forum (ITEF) 2025, Chennai Trade Centre<br>Presented on the application of
               blockchain technology in improving transparency and efficiency in supply chains.</p>
@@ -200,6 +207,15 @@
     <section id="projects" class="projects fade-in">
       <h2>Projects <i class='fas fa-folder'></i></h2>
       <div class="projects-container">
+        <div class="project-tile">
+          <a class="repository-card" href="https://github.com/Vikranth-1" target="_blank">
+            <h3><i class='fas fa-female'></i> HerWay – AI-Powered Career Empowerment Platform</h3>
+            <p>An AI-powered platform designed to empower women by conducting AI-driven skill assessments, generating
+              personalized career roadmaps, and enabling community-based skill exchange. It provides structured guidance
+              to help women discover, develop, and achieve their professional goals, creating an inclusive digital
+              ecosystem for confident career progression.</p>
+          </a>
+        </div>
         <div class="project-tile">
           <a class="repository-card" href="https://github.com/Vikranth-1" target="_blank">
             <h3><i class='fas fa-heart'></i> Integrated Digital Care for Elderly Wellbeing</h3>
@@ -272,7 +288,7 @@
     </section>
 
     <footer>
-      &copy; 2026 Vikranth V. All Rights Reserved.
+      &copy; 2025 Vikranth V. All Rights Reserved.
     </footer>
   </div>
 
